Adjusted heights to prevent rounding gaps in card list

--- a/src/sass/app-header.scss
+++ b/src/sass/app-header.scss
@@ -76,13 +76,15 @@
 		--header-height: #{$height-app-header-tall};
 	}
 	.app-header {
+		padding-top: $lhse*.125;
+
 		.wrap {
 			flex-wrap: wrap;
 			gap: divide($lhse, 3);
 			align-content: center;
 		}
 		.app-title {
-			margin: -$lhse*.0833 auto 0;
+			margin: 0 auto (-$lhse*.125);
 		}
 	}
 }
