--- a/src/sass/deck-action-bar.scss
+++ b/src/sass/deck-action-bar.scss
@@ -142,8 +142,6 @@
 }
 @media (max-width: ($min-width-app*.6)) {
 	.mode-menu {
-		height: $lhse*2.25;
-
 		a {
 			height: $lhse*1.875;
 		}
